[package]
name = "hickory-to-socket-addrs"
version = "1.2.1"
edition = "2024"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "std::net::ToSocketAddrs backed by hickory-dns"
repository = "https://github.com/amqp-rs/hickory-to-socket-addrs"
readme = "README.md"
documentation = "https://docs.rs/hickory-to-socket-addrs"
keywords = ["dns"]
categories = ["network-programming"]
license = "MIT"
rust-version = "1.85.0"

[features]
default = []
reactor-trait = ["dep:async-trait", "dep:reactor-trait"]

[dependencies.async-trait]
version = "^0.1.42"
default-features = false
optional = true

[dependencies.hickory-resolver]
version = "^0.25"
default-features = false
features = ["system-config", "tokio"]

[dependencies.reactor-trait]
version = "^2.4"
default-features = false
optional = true

[dependencies.tokio]
version = "^1.47"
default-features = false
features = ["rt"]

[badges]
maintenance = { status = "actively-developed" }
